fix broken styles

--- a/packages/boxel-ui/addon/src/styles/variables.css
+++ b/packages/boxel-ui/addon/src/styles/variables.css
@@ -107,19 +107,13 @@
   --boxel-border-card: 1px solid rgba(0, 0, 0, 0.1);
 
   /* border-radius */
-  --boxel-border-radius-2xs: calc(
-    var(--boxel-border-radius-xs) - 2.5px
-  ); /* 1.5px */
-  --boxel-border-radius-xs: calc(var(--boxel-border-radius-sm) - 2px); /* 4px */
-  --boxel-border-radius-sm: calc(var(--boxel-border-radius) - 4px); /* 6px */
+  --boxel-border-radius-2xs: calc(var(--boxel-border-radius) * 0.5); /* 1.5px */
+  --boxel-border-radius-xs: calc(var(--boxel-border-radius) * 0.4); /* 4px */
+  --boxel-border-radius-sm: calc(var(--boxel-border-radius) * 0.6); /* 6px */
   --boxel-border-radius: var(--boxel-radius); /* 10px - base */
-  --boxel-border-radius-lg: calc(var(--boxel-border-radius) + 2px); /* 12px */
-  --boxel-border-radius-xl: calc(
-    var(--boxel-border-radius-lg) + 3px
-  ); /* 15px */
-  --boxel-border-radius-2xl: calc(
-    var(--boxel-border-radius-xl) + 5px
-  ); /* 20px */
+  --boxel-border-radius-lg: calc(var(--boxel-border-radius) * 1.2); /* 12px */
+  --boxel-border-radius-xl: calc(var(--boxel-border-radius) * 1.5); /* 15px */
+  --boxel-border-radius-2xl: calc(var(--boxel-border-radius) * 2); /* 20px */
 
   /* animations */
   --boxel-infinite-spin-animation: boxel-spin 6000ms linear infinite;
